[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/pres-start-12.tres" type="DynamicFont" id=1]
[ext_resource path="res://controls/score-hud/ScoreHud.gd" type="Script" id=2]
[ext_resource path="res://fonts/pres-start-24.tres" type="DynamicFont" id=3]

[node name="ScoreHud" type="Node2D"]
position = Vector2( 16, 71 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -71.0
margin_right = 1008.0
margin_bottom = 24.0
color = Color( 0.207843, 0.403922, 0.776471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelName" type="Label" parent="."]
margin_left = -8.0
margin_top = -68.0
margin_right = 1000.0
margin_bottom = -39.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "The difficult second Level"
align = 1
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLevelRecord" type="Label" parent="."]
margin_left = -8.0
margin_top = -28.0
margin_right = 1000.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.772549, 0.729412, 0.729412, 1 )
text = "Record: 0:00 (31/05/2021)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Node2D" parent="."]
position = Vector2( -56, -16 )

[node name="ScoreText" type="Label" parent="Score"]
margin_left = 36.0
margin_top = -30.0
margin_right = 172.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "SCORE"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="Score"]
margin_left = 184.0
margin_top = -30.0
margin_right = 320.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Node2D" parent="."]
position = Vector2( 747, -32 )

[node name="LivesText" type="Label" parent="Lives"]
margin_left = 53.0
margin_top = -14.0
margin_right = 189.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Lives"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesValue" type="Label" parent="Lives"]
margin_left = 189.0
margin_top = -14.0
margin_right = 325.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTime" type="Node2D" parent="."]
position = Vector2( -72, 32 )

[node name="GameTimeText" type="Label" parent="GameTime"]
margin_left = 40.0
margin_top = -37.0
margin_right = 176.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "GAME
"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimeValue" type="Label" parent="GameTime"]
margin_left = 200.0
margin_top = -48.0
margin_right = 392.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00:00:00"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTime" type="Node2D" parent="."]
position = Vector2( 656, 24 )

[node name="LevelTimeText" type="Label" parent="LevelTime"]
margin_left = 43.0
margin_top = -41.0
margin_right = 179.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Level"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTimeValue" type="Label" parent="LevelTime"]
margin_left = 192.0
margin_top = -41.0
margin_right = 360.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0:00:00"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Node2D" parent="."]
position = Vector2( 440, -4 )

[node name="LabelFPS" type="Label" parent="Debug"]
margin_left = -16.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.772549, 0.729412, 0.729412, 1 )
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueFPS" type="Label" parent="Debug"]
margin_left = 32.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMem" type="Label" parent="Debug"]
margin_left = 72.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.772549, 0.729412, 0.729412, 1 )
text = "MEM:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueMem" type="Label" parent="Debug"]
margin_left = 117.0
margin_top = 8.0
margin_right = 157.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGodMode" type="Label" parent="Debug"]
margin_left = -448.0
margin_top = -59.0
margin_right = -424.0
margin_bottom = -45.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.584314, 0.0196078, 0.0196078, 1 )
text = "GM"
__meta__ = {
"_edit_use_anchors_": false
}
